fixed more layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@ image {
 
 .page {
     position: relative;
-    width: 100vw;
     height: 100vh;
     text-align: center;
     top: 50%;
